<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">


    <ImageView
        android:id="@+id/himage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp"
        app:srcCompat="@drawable/hp" />

    <TextView
        android:id="@+id/des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/himage"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/hdes"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/vision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/des"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/hvision"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vision"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/hmission"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25sp"
        android:backgroundTint="@color/marron"
        android:text="@string/hbt" />
</RelativeLayout>